# hypertension_risk_predictor

./: .gitignore  DSA Project (Hypertension RP).ipynb  Project PPT.pptx  README.md  app.py  pyproject.toml  requirements.txt
model/: best_hypertension_model.pkl  scaler.pkl  xgb_hypertension_model.pkl
templates/: index.html
utils/: index.html  predict.py
