[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypertension-risk-predictor"
version = "1.0.0"
description = "A hypertension risk prediction application"
requires-python = ">=3.11"
dependencies = [
    "Flask==2.3.3",
    "flask-cors==4.0.0",
    "gunicorn==21.2.0",
    "numpy==1.24.3",
    "pandas==2.0.3",
    "scikit-learn==1.3.0",
    "xgboost==1.7.6",
]

[project.urls]
Homepage = "https://github.com/oyindamola1-png/hypertension_risk_predictor"

[tool.setuptools]
py-modules = ["app"]

[tool.setuptools.packages.find]
exclude = ["templates*", "static*", "model*"]